# poc-python-selenium

./: .containers-sugar.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yaml
conda/: dev.yaml
tests/: test_selenium.py
